Refactoring; add validation for ingredient create/edit - UOM remains